--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,8 @@
 index:
     path: /
     controller: App\Controller\HomeController::homepage
+
+
+classementclub:
+    path: /Classement/ClassementClub
+    controller: App\Controller\ClassementController::indexClubs
