--- a/.env
+++ b/.env
@@ -26,3 +26,7 @@ APP_SECRET=ee6344a8fb56f77ae15509973137bd6b
 # Configure your db driver and server_version in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root:''@127.0.0.1:3306/pronostic
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
+###< nelmio/cors-bundle ###
