--- a/composer.json
+++ b/composer.json
@@ -60,6 +60,7 @@
         }
     },
     "require-dev": {
+        "symfony/maker-bundle": "^1.11",
         "symfony/web-server-bundle": "4.2.*"
     }
 }
