--- a/.env
+++ b/.env
@@ -24,9 +24,9 @@ APP_SECRET=ee6344a8fb56f77ae15509973137bd6b
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
- HEAD
 
 
-DATABASE_URL=mysql://root:123456@127.0.0.1:3306/pronostique
- c41186a7654623b133f3f4c28e0bcc46cdcba12a
+
+DATABASE_URL=mysql://root:@127.0.0.1:3306/pronostique
+
 ###< doctrine/doctrine-bundle ###
