--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,6 @@
         "symfony/flex": "^1.1",
         "symfony/form": "4.2.*",
         "symfony/framework-bundle": "4.2.*",
-        "symfony/maker-bundle": "dev-master",
         "symfony/orm-pack": "^1.0",
         "symfony/twig-bundle": "4.2.*",
         "symfony/validator": "4.2.*",
@@ -67,6 +66,7 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.1",
+        "symfony/maker-bundle": "^1.11",
         "symfony/web-server-bundle": "4.2.*"
     }
 }
