--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,8 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "cocur/slugify": "^3.2",
+        "easycorp/easyadmin-bundle": "^2.1",
         "fzaninotto/faker": "^1.8",
         "knplabs/knp-paginator-bundle": "^3.0",
         "sensio/framework-extra-bundle": "^5.2",
