--- a/.env
+++ b/.env
@@ -31,7 +31,7 @@ APP_SECRET=ee6344a8fb56f77ae15509973137bd6b
 
 
 
-DATABASE_URL=mysql://root:@127.0.0.1:3306/pronostiques
+DATABASE_URL=mysql://root:newpass@127.0.0.1:3306/pronostiques
 
 
 
