--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ APP_SECRET=ee6344a8fb56f77ae15509973137bd6b
 # Configure your db driver and server_version in config/packages/doctrine.yaml
 
 
-DATABASE_URL=mysql://root:123456@127.0.0.1:3306/pronostiques
+DATABASE_URL=mysql://root:newpass@127.0.0.1:3306/pronostiq
 
 
 
